--- a/extras/crossplane/providers/upbound/azure/deploymentruntime.yaml
+++ b/extras/crossplane/providers/upbound/azure/deploymentruntime.yaml
@@ -29,7 +29,7 @@ spec:
 apiVersion: pkg.crossplane.io/v1beta1
 kind: DeploymentRuntimeConfig
 metadata:
-  name: upbound-provider-azure-storage
+  name: upbound-provider-azure
   labels:
     provider-family: azure
     provider-family-member: azure-provider
