--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -2,4 +2,5 @@ resources:
   - app-admission-controller.yaml
   - app-exporter.yaml
   - app-operator.yaml
+  - happa.yaml
   - konfigure-operator.yaml
