Configure Crossplane for Azure (#405)
## Some hints on changes to this repository

This pull request updates the Crossplane Upbound Azure provider
configuration to improve workload identity integration, update provider
versions, and add new resources and policy exceptions. The changes
mainly enhance security, update deployment details, and expand resource
support.

--- a/extras/crossplane/providers/upbound/azure/deploymentruntime.yaml
+++ b/extras/crossplane/providers/upbound/azure/deploymentruntime.yaml
@@ -9,9 +9,15 @@ metadata:
     provider-family-member: azure-family
 spec:
   deploymentTemplate:
+    metadata:
+      annotations:
+        azure.workload.identity/use: "true"
     spec:
       selector: {}
       template:
+        metadata:
+          annotations:
+            azure.workload.identity/use: "true"
         spec:
           serviceAccountName: upbound-provider-family-azure
           containers:
@@ -29,11 +35,17 @@ metadata:
     provider-family-member: azure-provider
 spec:
   deploymentTemplate:
+    metadata:
+      annotations:
+        azure.workload.identity/use: "true"
     spec:
       selector: {}
       template:
+        metadata:
+          annotations:
+            azure.workload.identity/use: "true"
         spec:
-          serviceAccountName: replaced by kustomization
+          serviceAccountName: upbound-provider-azure
           containers:
             - name: package-runtime
               args:
