--- a/extras/crossplane/providers/upbound/azure/kustomization.yaml
+++ b/extras/crossplane/providers/upbound/azure/kustomization.yaml
@@ -1,4 +1,7 @@
 resources:
+- deploymentruntime.yaml
+- network.yaml
+- polex.yaml
 - provider.yaml
 - service-account.yaml
-- deploymentruntime.yaml
+- storage.yaml
