Convert cluster-apps-operator to HelmRelease for collections bases

--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -2,5 +2,6 @@ resources:
   - app-admission-controller.yaml
   - app-exporter.yaml
   - app-operator.yaml
+  - cluster-apps-operator.yaml
   - happa.yaml
   - konfigure-operator.yaml
