Add cluster-releases catalog for release-versioned charts

--- a/bases/catalogs/giantswarm/kustomization.yaml
+++ b/bases/catalogs/giantswarm/kustomization.yaml
@@ -1,5 +1,6 @@
 resources:
   - appcatalog-cluster.yaml
+  - appcatalog-cluster-releases.yaml
   - appcatalog-cluster-test.yaml
   - appcatalog-control-plane-catalog.yaml
   - appcatalog-control-plane-test-catalog.yaml
