--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -2,6 +2,7 @@ resources:
   - app-admission-controller.yaml
   - app-exporter.yaml
   - app-operator.yaml
+  - athena.yaml
   - cluster-apps-operator.yaml
   - happa.yaml
   - konfigure-operator.yaml
