Update target and storage namespaces for prometheus-rules

--- a/bases/collections/shared/base/prometheus-rules.yaml
+++ b/bases/collections/shared/base/prometheus-rules.yaml
@@ -27,7 +27,8 @@ spec:
       retries: 10
   interval: 5m
   releaseName: prometheus-rules
-  targetNamespace: giantswarm
+  storageNamespace: monitoring
+  targetNamespace: monitoring
   timeout: 10m
   upgrade:
     remediation:
