Set fixed target and storage namespace for HelmReleases in collections

--- a/bases/collections/shared/base/cluster-apps-operator.yaml
+++ b/bases/collections/shared/base/cluster-apps-operator.yaml
@@ -27,6 +27,7 @@ spec:
       retries: 10
   interval: 5m
   releaseName: cluster-apps-operator
+  storageNamespace: giantswarm
   targetNamespace: giantswarm
   timeout: 10m
   upgrade:
