--- a/bases/collections/shared/base/app-exporter.yaml
+++ b/bases/collections/shared/base/app-exporter.yaml
@@ -27,6 +27,7 @@ spec:
       retries: 10
   interval: 5m
   releaseName: app-exporter
+  storageNamespace: giantswarm
   targetNamespace: giantswarm
   timeout: 10m
   upgrade:
