Convert cluster-cleaner to HelmRelease for collections bases

--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - athena.yaml
   - cloudnative-pg.yaml
   - cluster-apps-operator.yaml
+  - cluster-cleaner.yaml
   - happa.yaml
   - konfigure-operator.yaml
   - prometheus-rules.yaml
