Convert grafana to HelmRelease for collections bases

--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - cloudnative-pg.yaml
   - cluster-apps-operator.yaml
   - cluster-cleaner.yaml
+  - grafana.yaml
   - happa.yaml
   - konfigure-operator.yaml
   - prometheus-rules.yaml
