--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - cluster-api.yaml
   - cluster-apps-operator.yaml
   - cluster-cleaner.yaml
+  - deletion-blocker-operator.yaml
   - encryption-provider-operator.yaml
   - grafana.yaml
   - happa.yaml
