--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - cluster-api.yaml
   - cluster-apps-operator.yaml
   - cluster-cleaner.yaml
+  - dashboards.yaml
   - encryption-provider-operator.yaml
   - grafana.yaml
   - happa.yaml
