Convert kyverno-policies-observability to HelmRelease for collections bases

--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -13,4 +13,5 @@ resources:
   - happa.yaml
   - konfigure-operator.yaml
   - kube-downscaler.yaml
+  - kyverno-policies-observability.yaml
   - prometheus-rules.yaml
