Add kyverno-policies-observability as part of App CR for HelmRelease migration (#433)
Towards: https://github.com/giantswarm/giantswarm/issues/35076

--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -13,5 +13,6 @@ resources:
   - happa.yaml
   - konfigure-operator.yaml
   - kube-downscaler.yaml
+  - kyverno-policies-observability.yaml
   - prometheus-rules.yaml
   - sloth.yaml
