Add sloth-rules as part of App CR for HelmRelease migration (#435)
Towards: https://github.com/giantswarm/giantswarm/issues/35076

--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -15,4 +15,5 @@ resources:
   - kube-downscaler.yaml
   - kyverno-policies-observability.yaml
   - prometheus-rules.yaml
+  - sloth-rules.yaml
   - sloth.yaml
