--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   - happa.yaml
   - konfigure-operator.yaml
   - kube-downscaler.yaml
+  - kyverno-policies-dx.yaml
   - kyverno-policies-observability.yaml
   - prometheus-rules.yaml
   - sloth-rules.yaml
