Set defaults for Zot HTTPRoutes
Signed-off-by: Matias Charriere <matias@giantswarm.io>

--- a/extras/zot-cache/values.yaml
+++ b/extras/zot-cache/values.yaml
@@ -9,6 +9,15 @@ ingress:
     kubernetes.io/tls-acme: "true"
     nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
 
+route:
+  parentRefs:
+    - name: giantswarm-default
+      namespace: envoy-gateway-system
+  backendTrafficPolicy:
+    enabled: true
+    connection:
+      bufferLimit: 1Gi
+
 strategy:
   type: Recreate
 
