--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - encryption-provider-operator.yaml
   - grafana.yaml
   - happa.yaml
+  - ingress-nginx.yaml
   - konfigure-operator.yaml
   - kube-downscaler.yaml
   - kyverno-policies-dx.yaml
