Convert kyverno-policies-ux to HelmRelease for collections bases

--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -16,6 +16,7 @@ resources:
   - kube-downscaler.yaml
   - kyverno-policies-dx.yaml
   - kyverno-policies-observability.yaml
+  - kyverno-policies-ux.yaml
   - prometheus-rules.yaml
   - sloth-rules.yaml
   - sloth.yaml
