Add kyverno-policies-ux as part of App CR for HelmRelease migration (#441)
Towards: https://github.com/giantswarm/giantswarm/issues/35076

--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -16,6 +16,7 @@ resources:
   - kube-downscaler.yaml
   - kyverno-policies-dx.yaml
   - kyverno-policies-observability.yaml
+  - kyverno-policies-ux.yaml
   - observability-operator.yaml
   - prometheus-rules.yaml
   - sloth-rules.yaml
