--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -19,6 +19,7 @@ resources:
   - kyverno-policies-ux.yaml
   - observability-operator.yaml
   - observability-platform-api.yaml
+  - organization-operator.yaml
   - prometheus-rules.yaml
   - sloth-rules.yaml
   - sloth.yaml
