Create eks releases Kustomization
And deploy it in all CAPA MCs by defaul

--- a/bases/provider/capa/flux-v2/kustomization.yaml
+++ b/bases/provider/capa/flux-v2/kustomization.yaml
@@ -7,4 +7,5 @@ resources:
   - ../../../flux-giantswarm-resources
   - ../../../flux-operator
   - ../releases
+  - ../../eks/releases
   - configmap-provider-data.yaml
