--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -20,6 +20,7 @@ resources:
   - observability-operator.yaml
   - observability-platform-api.yaml
   - organization-operator.yaml
+  - plugin-barman-cloud.yaml
   - prometheus-rules.yaml
   - sloth-rules.yaml
   - sloth.yaml
