Convert kyverno-policies-connectivity to HelmRelease for collections bases

--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
   - ingress-nginx.yaml
   - konfigure-operator.yaml
   - kube-downscaler.yaml
+  - kyverno-policies-connectivity.yaml
   - kyverno-policies-dx.yaml
   - kyverno-policies-observability.yaml
   - kyverno-policies-ux.yaml
