--- a/bases/collections/capz/base/kustomization.yaml
+++ b/bases/collections/capz/base/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 patches: []
 resources:
-- azure-private-dns-crossplane-resources.yaml
+  - azure-private-dns-crossplane-resources.yaml
+  - object-storage-operator.yaml
