Add plugin-barman-cloud as part of App CR for HelmRelease migration (#449)
Towards: https://github.com/giantswarm/giantswarm/issues/35076

--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -21,6 +21,7 @@ resources:
   - observability-operator.yaml
   - observability-platform-api.yaml
   - organization-operator.yaml
+  - plugin-barman-cloud.yaml
   - prometheus-remotewrite.yaml
   - prometheus-rules.yaml
   - sloth-rules.yaml
