Convert silence-operator to HelmRelease for collections bases

--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -25,5 +25,6 @@ resources:
   - plugin-barman-cloud.yaml
   - prometheus-remotewrite.yaml
   - prometheus-rules.yaml
+  - silence-operator.yaml
   - sloth-rules.yaml
   - sloth.yaml
