--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -19,6 +19,7 @@ resources:
   - kyverno-policies-dx.yaml
   - kyverno-policies-observability.yaml
   - kyverno-policies-ux.yaml
+  - loki.yaml
   - observability-operator.yaml
   - observability-platform-api.yaml
   - organization-operator.yaml
