--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -27,6 +27,7 @@ resources:
   - plugin-barman-cloud.yaml
   - prometheus-remotewrite.yaml
   - prometheus-rules.yaml
+  - rbac-operator.yaml
   - silence-operator.yaml
   - sloth-rules.yaml
   - sloth.yaml
