Convert oauth2-proxy to HelmRelease for collections bases

--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -22,6 +22,7 @@ resources:
   - kyverno-policies-ux.yaml
   - loki.yaml
   - mimir.yaml
+  - oauth2-proxy.yaml
   - observability-operator.yaml
   - observability-platform-api.yaml
   - organization-operator.yaml
