Convert fluent-logshipping-app to HelmRelease for collections bases

--- a/bases/collections/shared/base/kustomization.yaml
+++ b/bases/collections/shared/base/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - cluster-cleaner.yaml
   - dashboards.yaml
   - encryption-provider-operator.yaml
+  - fluent-logshipping-app.yaml
   - grafana.yaml
   - happa.yaml
   - ingress-nginx.yaml
